--- a/Services/.env
+++ b/Services/.env
@@ -6,3 +6,6 @@ POSTGRES_PORT = 5432
 
 EMAIL_USER = "flexi.ecomm@gmail.com"
 EMAIL_PASSWORD = "wwda hkzx ejww ftur" 
+
+RP_PUBLIC_KEY = rzp_test_v2FkZ2OaqM10LE
+RP_SECRET_KEY = fXoulti7ZX9OtCsiWiZOpScu
